--- a/html/exercicios/form/form.html
+++ b/html/exercicios/form/form.html
@@ -1,6 +1,6 @@
 <h1>Formulário</h1>
 
-<form action="http://localhost:3003/usuarios" method="POST">
+<form method="POST">
   <input type="text" name="nome" >
   <input type="password" name="senha">
   <textarea name="bio" id="" cols="30" rows="10"></textarea>
@@ -14,7 +14,7 @@
     <input type="checkbox" name="ativo">Ativo
   </div>
   <select name="estado">
-    <option>Selecione</option>
+    <option value="">Selecione</option>
     <option value="ac">Acre</option>
     <option value="ba">Bahia</option>
     <option value="ce">Ceara</option>
@@ -27,7 +27,8 @@
     <option value="go">Go</option>
     <option value="c">C</option>
   </select>
-  <button>Incluir</button>
+  <button formaction="http://localhost:3003/usuarios" >Incluir</button>
+  <button formaction="http://localhost:3003/usuarios/3">Alterar</button>
 </form>
 
 <style>
