--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exerccícios HTML</title>
+    <title>Exercícios HTML</title>
     <style>
       #conteudo {
         padding: 30px 0px;
@@ -23,6 +23,9 @@
         <a href wm-nav="exercicios/links.html">05 - Links</a>|
         <a href wm-nav="exercicios/tabelas.html">06 - Tabelas</a>|
         <a href wm-nav="exercicios/form/form.html">07 - Formularios</a>|
+        <a href wm-nav="exercicios/imagens.html">08 - Imagens</a>|
+        <a href wm-nav="exercicios/video.html">09 - Vídeo</a>|
+        <a href wm-nav="exercicios/tagsNaoVisuais.html">10 - Tags não visuais</a>|
     </nav>
     <section id="conteudo"></section>
     <footer>
