--- a/css/css/cores.html
+++ b/css/css/cores.html
@@ -2,16 +2,30 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Cores</title>
-    <style>
-        /* 
+  <meta charset="UTF-8">
+  <title>Cores</title>
+  <style>
+    /* 
             https://www.w3schools.com/colors/colors_hsl.asp
             
             https://coolors.co/
             http://paletton.com/
         */
-    </style>
+    body {
+      background-color: green;
+      background-color: #f67809;
+      background-color: #abc;
+      background-color: #abc8;
+      /*ultimo caractere transparencia*/
+      background-color: #edc91280;
+      /*dois digitos a mais transaparencia*/
+      background-color: rgb(55, 110, 220);
+      background-color: rgba(55, 110, 220, .3);
+      /* hue, saturation, light  */
+      background-color: hsl(299, 58%, 50%);
+      background-color: hsla( 299, 58%, 50%, .3);
+    }
+  </style>
 </head>
 
 <body>
