--- a/css/css/index.html
+++ b/css/css/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Capítulo CSS</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <lin href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <style>
         html {
             height: 100%;
@@ -16,7 +16,6 @@
             background-color: lightgray;
             height: 100%;
         }
-        
         .conteudo {
             display: flex;
             flex-direction: column;
